# fairdicecontract

./: CMakeLists.txt  README.md
fairdicegame/abi/: fairdicegame.abi
fairdicegame/include/: fairdicegame.hpp  types.hpp
fairdicegame/src/: fairdicegame.cpp
fairdicelogs/abi/: fairdicelogs.abi
fairdicelogs/include/: fairdicelogs.hpp
fairdicetoken/: CMakeLists.txt  fairdicetoken.abi  fairdicetoken.wasm
fairdicetoken/include/: fairdicetoken.hpp  types.hpp
fairdicetoken/src/: fairdicetoken.cpp
